[tool.poetry]
name = "cams-radiation"
version = "0.1.0"
description = ""
authors = ["Olli Nevalainen <olli.nevalainen.fmi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.0.2"
xarray = "^2022.12.0"
cdsapi = "^0.6.1"
pydantic = "^2.5.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
